nuevo documento en html

--- a/pag.html
+++ b/pag.html
@@ -8,12 +8,23 @@
 </head> <h1>PROYECTO Nº 1</h1>
 <body>
     <h3>Aprendiendo a usar git-hub</h3>
-    <h3> Lorem ipsum dolor sit amet, 
+    <br>
+    <p> Lorem ipsum dolor sit amet, 
         consectetur adipisicing elit. 
         Esse, corrupti odio. Numquam quaerat quasi, 
         nisi ipsa, temporibus maiores minima deserunt 
         alias quam, perferendis aliquam! Rem voluptatem 
-        provident velit fugiat modi!</h3>
+        provident velit fugiat modi!</p>
+    <br><br>
+
+    <a href="https://www.google.com">google</a>
+    <br><br>
+    <p> Lorem ipsum dolor sit amet, 
+        consectetur adipisicing elit. 
+        Esse, corrupti odio. Numquam quaerat quasi, 
+        nisi ipsa, temporibus maiores minima deserunt 
+        alias quam, perferendis aliquam! Rem voluptatem 
+        provident velit fugiat modi!</p>
 
 </body>
 </html>
