--- a/pag.html
+++ b/pag.html
@@ -5,26 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documento</title>
-</head> <h1>PROYECTO Nº 1</h1>
+</head> 
+    <h1 align="center">GITHUB</h1>
 <body>
-    <h3>Aprendiendo a usar git-hub</h3>
+    <h2>Aprendiendo a usar git-hub</h2>
     <br>
-    <p> Lorem ipsum dolor sit amet, 
-        consectetur adipisicing elit. 
-        Esse, corrupti odio. Numquam quaerat quasi, 
-        nisi ipsa, temporibus maiores minima deserunt 
-        alias quam, perferendis aliquam! Rem voluptatem 
-        provident velit fugiat modi!</p>
-    <br><br>
-
-    <a href="https://www.google.com">google</a>
-    <br><br>
-    <p> Lorem ipsum dolor sit amet, 
-        consectetur adipisicing elit. 
-        Esse, corrupti odio. Numquam quaerat quasi, 
-        nisi ipsa, temporibus maiores minima deserunt 
-        alias quam, perferendis aliquam! Rem voluptatem 
-        provident velit fugiat modi!</p>
-
+    <p> Es un portal creado para poder almacenar todo tipo de código creado por un usuario,
+        estos pueden ser públicos o privados, dependiendo al trabajo que se realice 
+    </p>  
+    <h3>Comandos</h3>
+    <h3>Git clone</h3>
+    <p> Este comando se utiliza para poder clonar cualquier tipo de trabajo siempre y cuando este sea de dominio
+        publico, con él puedes clonar/copiar, el trabajo que desees sin ningun inconveniente
+    </p>
+    <h3>Git Status</h3>
+    <p>Este comando se utiliza para poder ver el estado en el que se encuentra el trabajo que realizas, es decir
+        si esta guardado o si tiene algun tipo de modificación
+    </p>
+    <h3>Git add</h3>
+    <p>Este comando sirve para poder ingresar un archivo a GITHUB, es decir poder guardalo y que este este agregado
+        en el resto del trabajo
+    </p>
+    <h3>Git Commit -m""</h3>
+    <p>El commit sirve para poder poner una descripcion al trabajo que se esta realizando y asi tener un panorama
+        mas claro de lo que se esta haciendo
+    </p>
+    <h3>Git push origin master</h3>
+    <p>El push sirve para poder subir el trabajo al git-hub web, el cual estara en tu reservorio para poder utilizarlo despues
+        o para que otros puedan acceder a al mismo en caso de que sea publico
+    </p>
 </body>
 </html>
