Lista de comandos GITHUB

--- a/pag.html
+++ b/pag.html
@@ -9,30 +9,57 @@
     <h1 align="center">GITHUB</h1>
 <body>
     <h2>Aprendiendo a usar git-hub</h2>
-    <br>
     <p> Es un portal creado para poder almacenar todo tipo de código creado por un usuario,
         estos pueden ser públicos o privados, dependiendo al trabajo que se realice 
     </p>  
     <h3>Comandos</h3>
-    <h3>Git clone</h3>
-    <p> Este comando se utiliza para poder clonar cualquier tipo de trabajo siempre y cuando este sea de dominio
-        publico, con él puedes clonar/copiar, el trabajo que desees sin ningun inconveniente
+    <ul>
+    <a href="#config"><li>Git config</li></a>
+    <a href="#init"><li>Git init</li></a>
+    <a href="#remote"><li>Git remote </li></a>
+        <ol>
+    <a href="#origin"><li>add origin "git hub"</li></a>
+    <a href="#set-url"><li>set-url origin https://tokern@GITHUB</li></a>
+        </ol>
+    <a href="#add"><li>Git add</li></a>
+    <a href="#status"><li>Git status</li></a>
+    <a href="#commit"><li>Git commit -m""</li></a>
+    <a href="#push"><li>Git push origin "branch"</li></a>
+
+    </ul>
+    <h3 id="config">Git config</h3>
+    <p>Este comando sirve para poder configurar el git-hub de tal modo que pueda iniciar de manera correcta
+        todos los proyectos a realizarse
     </p>
-    <h3>Git Status</h3>
-    <p>Este comando se utiliza para poder ver el estado en el que se encuentra el trabajo que realizas, es decir
-        si esta guardado o si tiene algun tipo de modificación
+    <h3 id="init">Git init</h3>
+    <p> Este comando se utiliza para poder iniciar cualquier trabajo en el git-hub, con el cual damos por entendido
+        que este es el primer paso para trabajar
     </p>
-    <h3>Git add</h3>
+    <h3 id="remote">Git remote</h3>
+    <p> Este comando se utiliza para modificar el trabajo que se va a realizar consta de 2 comandos que son:
+    </p>
+    <h3 id="origin">Git origin</h3>
+    <p> Se utiliza para poder guardar el repositorio desde donde se puede copiar o clonar el mismo
+    </p>
+    <h3 id="set-url">Git <set-url></set-url></h3>
+    <p> Este comando se utiliza para modificar o cambiar la direccion url del repositorio
+    </p>
+    <h3 id="add">Git add</h3>
     <p>Este comando sirve para poder ingresar un archivo a GITHUB, es decir poder guardalo y que este este agregado
         en el resto del trabajo
     </p>
-    <h3>Git Commit -m""</h3>
+    <h3 id="status">Git Status</h3>
+    <p>Este comando se utiliza para poder ver el estado en el que se encuentra el trabajo que realizas, es decir
+        si esta guardado o si tiene algun tipo de modificación
+    </p>
+    <h3 id="commit">Git commit -m""</h3>
     <p>El commit sirve para poder poner una descripcion al trabajo que se esta realizando y asi tener un panorama
         mas claro de lo que se esta haciendo
     </p>
-    <h3>Git push origin master</h3>
+    <h3 id="push">Git push origin "branch"</h3>
     <p>El push sirve para poder subir el trabajo al git-hub web, el cual estara en tu reservorio para poder utilizarlo despues
         o para que otros puedan acceder a al mismo en caso de que sea publico
     </p>
+    
 </body>
 </html>
