Nuevo avance pagina

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/homestyle.css">
     <link rel="stylesheet" href="style/main.css">
     <title>My page one</title>
 </head>
@@ -14,11 +15,12 @@
         <a href="imagenes/imagen3.png">Contact us</a>
         <a href="imagenes/imagen5.png">About us</a>
     </nav>
-    <h1>WELCOME TO OFFICIAL WEBSITE</h1>
-    <h2>SELECTION HOLANDESA</h2>
-    <p>La selección de fútbol de los Países Bajos (en neerlandés, Nederlands voetbalelftal) es el equipo representativo de este país en las competiciones oficiales desde 1905. Su organización está a cargo de la Real Asociación Neerlandesa de Fútbol (en neerlandés, Koninklijke Nederlandse Voetbalbond), que es una de las asociaciones más antiguas del mundo, pertenece a la UEFA y está afiliada a la FIFA. A menudo es citada también, imprecisamente, como la selección de fútbol de Holanda, siendo el uso de dicha denominación incluso más popular que la denominación oficial. Hasta el año 2020, la Real Asociación Neerlandesa de Fútbol promovía el uso de dicho nombre en el ámbito deportivo, pero en el marco de ciertas reformas relativas a la promoción del país en el extranjero aplicadas ese año, las autoridades decidieron reforzar la nomenclatura oficial del Estado, optando por el uso del término «Países Bajos» en ámbitos donde se seguía usando la denominación «Holanda».2​ En atención a lo anterior, tanto la FIFA como la UEFA han adoptado las medidas necesarias para aplicar dicho cambio en lo referente al equipo neerlandés, siendo la denominación usada hoy en todos los ámbitos oficiales el de «selección de fútbol de los Países Bajos».
-        La selección neerlandesa de fútbol es uno de los equipos más importantes y de mayor prestigio del mundo. Ha participado en doce ediciones de la Copa Mundial de Fútbol, donde ha sido subcampeona en tres ediciones de la competición: 1974, 1978 y 2010; y además fue semifinalista en otras dos ediciones: 1998 y 2014. Además, ha competido diez veces en la Eurocopa, logrando el título en 1988. También, el equipo ganó una medalla de bronce en el torneo olímpico de 1908, 1912 y 1920. Fue subcampeón de la Liga de Naciones de la UEFA en la primera edición realizada en 2019. En la década de 1970, recibió el apodo de la Naranja Mecánica debido al color de su uniforme y al excelente nivel de juego alcanzado en aquellos años, el fútbol total,4​ cuando consiguió llegar a dos finales consecutivas del Mundial, en las cuales perdió.  
-        Es popularmente conocido como Oranje team (Oranje en neerlandés) debido al color de su uniforme. El club de fanes se conoce como Het Oranje Legioen (la Legión Naranja). En agosto de 2011, el equipo se clasificó número uno en la clasificación mundial de la FIFA, convirtiéndose así en el segundo equipo nacional de fútbol, después de España, en ser primero sin antes ganar una Copa del Mundo.</p>
+    <h1>Selección Holandesa</h1>
+    <div>
+        <p class="izq">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, iure! Laboriosam omnis repellat sapiente! Eveniet id repellat, necessitatibus expedita, illum rerum quam quidem fuga magni cumque alias minima cupiditate quisquam?</p>
+        <p class="der">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi a minus alias eum? Odit omnis magni facere molestias ea ullam iusto voluptatem? Nesciunt error quos ullam aperiam, sequi voluptas quibusdam!</p>
+    </div>
     </body>
+
     
 </html>
